# conversations

./: .gitignore  LICENSE  README.md  references.md  references.txt
cpp/helloCpp/: helloCpp
docs/: CNAME  index.html  tufte.css
learning/mlForArtists/02_classification/: classNotes.txt
learning/mlForArtists/03_regression/: regressionNotes.txt
learning/mlForArtists/04_classification2/: classification2Notes
learning/mlForArtists/05_featureExtraction/: featuresNotes.txt
learning/mlForArtists/06_time/: time.txt
learning/pyTorchTutorials/05_gradients/: gradients.py
learning/pyTorchTutorials/06_optimization/: optimization.py
projects/alloSynth/: proposal.md
python/tensors/: tensors.md
python/tutorials/00_helloPyTorch/: helloPyTorch.py
python/tutorials/01_tensors/: tensorAttributes.py  tensorInitialization.py  tensorOperations.py  tensors.md
python/tutorials/02_datasets/: datasetCreate.py  datasetImport.py  datasets.py
python/tutorials/03_transforms/: transforms.md  transforms.py
python/tutorials/04_neuralNet/: neuralNet.py
python/tutorials/04_neuralNets/: neuralNets.md  neuralNets.py
python/tutorials/05_gradients/: gradients.md  gradients.py
python/tutorials/06_optimization/: optimization.md
python/tutorials/datasets/: datasets.md  datasets.py  datasetsVisualization.py
python/tutorials/tensors/: tensorAttributes.py  tensorInitialization.py  tensorOperations.py  tensors.md
tools/maxMSP/featureExtractor/: README.md  featureExtractor.maxpat  featureExtractorTest.maxpat
tutorials/cpp/00_helloLibTorch/helloTensor/: CMakeLists.txt
(+14 files in other folders)
